# rc

./: CMakeLists.txt  CMakeLists.txt~  StripChart.kdev4  main.cpp  main.cpp~  sefafx.cpp  sefafx.cpp~  sefafx.h  sefafx.h~
Core/: CMakeLists.txt~  CoreHead.h~  FileIndex.cpp  FileIndex.cpp~  FileIndex.h  FileIndex.h~  note.txt
